# inviwo

./: .travis.yml  CMakeLists.txt  Jenkinsfile
apps/inviwo/: inviwomainwindow.cpp
apps/minimals/qt/: qtminimum.cpp
cmake/: compileoptions.cmake  globalconfig.cmake  globalmacros.cmake  packaging.cmake
data/volumes/: README.md
data/workspaces/: boron.inv  diagnosticlayout_head.inv  geometrypicking.inv  head4views.inv  heightfield.inv  isabelmulti.inv  multibi2o3.inv  subclavialighting.inv  volumeclipplane.inv
data/workspaces/tests/: 4views.inv  geometryshading.inv  heightfieldtest.inv  multiplanar.ini  multiplanar.inv  simplemeshclipping.inv  simpleslicergl.inv  volumeoperations.ini  volumeoperations.inv
docs/: README.md  _config.yml  about.md  building.md  index.md
docs/_posts/: 2020-01-20-welcome.md
include/inviwo/core/datastructures/: transferfunctiondatapoint.h
include/inviwo/core/datastructures/buffer/: buffer.h  bufferramprecision.h
include/inviwo/core/datastructures/image/: layerramprecision.h
include/inviwo/core/datastructures/volume/: volumeramprecision.h
include/inviwo/core/properties/: volumeindicatorproperty.h
modules/base/: CMakeLists.txt  basemodule.cpp
modules/base/processors/: cubeproxygeometry.cpp  geometrysource.cpp  imageexport.cpp  imagesource.cpp  imagesourceseries.cpp  pointlightsourceprocessor.cpp  volumeexport.cpp  volumesource.cpp  volumesubsample.cpp  volumesubset.cpp
modules/basecl/processors/: grayscaleclprocessor.cpp
modules/basegl/: CMakeLists.txt  baseglmodule.cpp
modules/basegl/processors/: volumeslicegl.cpp  volumeslicegl.h
modules/opengl/: textureutils.cpp
modules/opengl/glsl/: raycasting.frag
modules/opengl/image/: imagegl.cpp
modules/openglqt/: canvasqt.cpp
modules/python3/: CMakeLists.txt
modules/python3/interface/: inviwopy.cpp  pyisovalue.cpp  pyisovalue.h  pyproperties.cpp
modules/qtwidgets/: CMakeLists.txt
modules/qtwidgets/properties/: transferfunctioneditor.cpp  transferfunctioneditor.h  transferfunctioneditorcontrolpoint.cpp  transferfunctioneditorcontrolpoint.h  transferfunctioneditorisovalue.cpp  transferfunctioneditorisovalue.h  transferfunctioneditorprimitive.cpp  transferfunctioneditorprimitive.h  transferfunctionpropertydialog.cpp  transferfunctionpropertydialog.h
modules/webbrowser/docs/: webbrowsermodule.qch
src/core/: CMakeLists.txt
src/core/datastructures/buffer/: buffer.cpp  bufferramprecision.cpp
src/core/datastructures/geometry/: plane.cpp
src/core/datastructures/image/: layerramprecision.cpp
src/core/properties/: volumeindicatorproperty.cpp
src/qt/editor/: networkeditor.cpp
tools/jenkins/: check-format.py
