#--------------------------------------------------------------------
# Inviwo Base Module
ivw_module(Base)

#--------------------------------------------------------------------
# Add header files
set(HEADER_FILES
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/algorithmoptions.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/cohensutherland.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/convexhull.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/convexhullmesh.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/cubeproxygeometry.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/dataminmax.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/image/imagecontour.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/image/layerramdistancetransform.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/image/layerramsubset.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/mesh/axisalignedboundingbox.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/mesh/meshcameraalgorithms.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/mesh/meshclipping.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/mesh/meshconverter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/meshutils.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/randomutils.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/marchingcubes.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/marchingcubesopt.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/marchingtetrahedron.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/surfaceextraction.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumecurl.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumedivergence.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumegeneration.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumegradient.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumelaplacian.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumeramdistancetransform.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumeramsubsample.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumeramsubset.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/algorithm/volume/volumesignificantvoxels.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/basemodule.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/basemoduledefine.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/datastructures/disjointsets.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/datastructures/imagereusecache.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/datastructures/kdtree.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/binarystlwriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/datvolumesequencereader.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/datvolumewriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/ivfsequencevolumereader.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/ivfsequencevolumewriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/ivfvolumereader.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/ivfvolumewriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/stlwriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/io/wavefrontwriter.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/buffertomeshprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/camerafrustum.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/convexhull2dprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/cubeproxygeometryprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/dataexport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/datasource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/diffuselightsourceprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/directionallightsourceprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/distancetransformram.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/heightfieldmapper.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagecontourprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imageexport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imageinformation.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagesequenceelementselectorprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagesnapshot.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagesource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagesourceseries.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagestackvolumesource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/imagetospatialsampler.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/inputselector.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/layerdistancetransformram.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshclipping.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshconverterprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshcreator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshexport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshinformation.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshmapping.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshplaneclipping.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshsequenceelementselectorprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/meshsource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/noiseprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/noisevolumeprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/ordinalpropertyanimator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/orientationindicator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/pixeltobufferprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/pixelvalue.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/pointlightsourceprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/randommeshgenerator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/randomspheregenerator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/singlevoxel.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/spotlightsourceprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/stereocamerasyncer.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/surfaceextractionprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/tfselector.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/transform.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/trianglestowireframe.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/vectorelementselectorprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumebasistransformer.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumeboundaryplanes.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumeboundingbox.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumecreator.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumecurlcpuprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumedivergencecpuprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumeexport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumegradientcpuprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumeinformation.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumelaplacianprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesequenceelementselectorprocessor.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesequencesingletimestepsampler.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesequencesource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesequencetospatial4dsampler.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumeslice.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesource.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesubsample.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumesubset.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/volumetospatialsampler.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/processors/worldtransformdeprecated.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/basisproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/bufferinformationproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/gaussianproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/imageinformationproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/layerinformationproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/meshinformationproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/sequencetimerproperty.h
    ${CMAKE_CURRENT_LIST_DIR}/include/modules/base/properties/volumeinformationproperty.h
)
ivw_group("Header Files" ${HEADER_FILES})


#--------------------------------------------------------------------
# Add source files
set(SOURCE_FILES
    src/algorithm/algorithmoptions.cpp
    src/algorithm/cohensutherland.cpp
    src/algorithm/convexhullmesh.cpp
    src/algorithm/cubeproxygeometry.cpp
    src/algorithm/dataminmax.cpp
    src/algorithm/image/imagecontour.cpp
    src/algorithm/image/layerramdistancetransform.cpp
    src/algorithm/image/layerramsubset.cpp
    src/algorithm/mesh/axisalignedboundingbox.cpp
    src/algorithm/mesh/meshcameraalgorithms.cpp
    src/algorithm/mesh/meshclipping.cpp
    src/algorithm/mesh/meshconverter.cpp
    src/algorithm/meshutils.cpp
    src/algorithm/volume/marchingcubes.cpp
    src/algorithm/volume/marchingcubesopt.cpp
    src/algorithm/volume/marchingtetrahedron.cpp
    src/algorithm/volume/surfaceextraction.cpp
    src/algorithm/volume/volumecurl.cpp
    src/algorithm/volume/volumedivergence.cpp
    src/algorithm/volume/volumegeneration.cpp
    src/algorithm/volume/volumegradient.cpp
    src/algorithm/volume/volumelaplacian.cpp
    src/algorithm/volume/volumeramdistancetransform.cpp
    src/algorithm/volume/volumeramsubsample.cpp
    src/algorithm/volume/volumeramsubset.cpp
    src/algorithm/volume/volumesignificantvoxels.cpp
    src/basemodule.cpp
    src/datastructures/disjointsets.cpp
    src/datastructures/imagereusecache.cpp
    src/io/binarystlwriter.cpp
    src/io/datvolumesequencereader.cpp
    src/io/datvolumewriter.cpp
    src/io/ivfsequencevolumereader.cpp
    src/io/ivfsequencevolumewriter.cpp
    src/io/ivfvolumereader.cpp
    src/io/ivfvolumewriter.cpp
    src/io/stlwriter.cpp
    src/io/wavefrontwriter.cpp
    src/processors/buffertomeshprocessor.cpp
    src/processors/camerafrustum.cpp
    src/processors/convexhull2dprocessor.cpp
    src/processors/cubeproxygeometryprocessor.cpp
    src/processors/diffuselightsourceprocessor.cpp
    src/processors/directionallightsourceprocessor.cpp
    src/processors/distancetransformram.cpp
    src/processors/heightfieldmapper.cpp
    src/processors/imagecontourprocessor.cpp
    src/processors/imageexport.cpp
    src/processors/imageinformation.cpp
    src/processors/imagesequenceelementselectorprocessor.cpp
    src/processors/imagesnapshot.cpp
    src/processors/imagesource.cpp
    src/processors/imagesourceseries.cpp
    src/processors/imagestackvolumesource.cpp
    src/processors/imagetospatialsampler.cpp
    src/processors/inputselector.cpp
    src/processors/layerdistancetransformram.cpp
    src/processors/meshclipping.cpp
    src/processors/meshconverterprocessor.cpp
    src/processors/meshcreator.cpp
    src/processors/meshexport.cpp
    src/processors/meshinformation.cpp
    src/processors/meshmapping.cpp
    src/processors/meshplaneclipping.cpp
    src/processors/meshsequenceelementselectorprocessor.cpp
    src/processors/meshsource.cpp
    src/processors/noiseprocessor.cpp
    src/processors/noisevolumeprocessor.cpp
    src/processors/ordinalpropertyanimator.cpp
    src/processors/orientationindicator.cpp
    src/processors/pixeltobufferprocessor.cpp
    src/processors/pixelvalue.cpp
    src/processors/pointlightsourceprocessor.cpp
    src/processors/randommeshgenerator.cpp
    src/processors/randomspheregenerator.cpp
    src/processors/singlevoxel.cpp
    src/processors/spotlightsourceprocessor.cpp
    src/processors/stereocamerasyncer.cpp
    src/processors/surfaceextractionprocessor.cpp
    src/processors/tfselector.cpp
    src/processors/transform.cpp
    src/processors/trianglestowireframe.cpp
    src/processors/volumeboundaryplanes.cpp
    src/processors/volumeboundingbox.cpp
    src/processors/volumecreator.cpp
    src/processors/volumecurlcpuprocessor.cpp
    src/processors/volumedivergencecpuprocessor.cpp
    src/processors/volumeexport.cpp
    src/processors/volumegradientcpuprocessor.cpp
    src/processors/volumeinformation.cpp
    src/processors/volumelaplacianprocessor.cpp
    src/processors/volumesequenceelementselectorprocessor.cpp
    src/processors/volumesequencesingletimestepsampler.cpp
    src/processors/volumesequencesource.cpp
    src/processors/volumesequencetospatial4dsampler.cpp
    src/processors/volumeslice.cpp
    src/processors/volumesource.cpp
    src/processors/volumesubsample.cpp
    src/processors/volumesubset.cpp
    src/processors/volumetospatialsampler.cpp
    src/properties/basisproperty.cpp
    src/properties/bufferinformationproperty.cpp
    src/properties/gaussianproperty.cpp
    src/properties/imageinformationproperty.cpp
    src/properties/layerinformationproperty.cpp
    src/properties/meshinformationproperty.cpp
    src/properties/sequencetimerproperty.cpp
    src/properties/volumeinformationproperty.cpp
)
ivw_group("Source Files" ${SOURCE_FILES})

#--------------------------------------------------------------------
# Unit tests
set(TEST_FILES
    tests/unittests/base-unittest-main.cpp
    tests/unittests/convexhull-test.cpp
    tests/unittests/kdtree-test.cpp
    tests/unittests/marchingcubes-test.cpp
    tests/unittests/meshcutting-test.cpp
)
ivw_add_unittest(${TEST_FILES})

#--------------------------------------------------------------------
# Create module
ivw_create_module(NO_PCH ${SOURCE_FILES} ${MOC_FILES} ${HEADER_FILES})
if(IVW_BENCHMARKS)
    add_subdirectory(tests/benchmarks)
endif()

ivw_target_pch_header(inviwo-module-base ${HEADER_FILES})
